[package]
name = "osdev"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[features]
default = []
rpi3 = []
rpi4 = []

[[bin]]
name = "kernel"
path = "src/main.rs"

##--------------------------------------------------------------------------------------------------
## Dependencies
##--------------------------------------------------------------------------------------------------

[dependencies]
