[package]
name = "osdev"
version = "0.2.0"
edition = "2021"

[profile.release]
lto = true

[features]
default = []
rpi3 = []
rpi4 = []

[[bin]]
name = "kernel"
path = "src/main.rs"

##--------------------------------------------------------------------------------------------------
## Dependencies
##--------------------------------------------------------------------------------------------------

[dependencies]
[target.'cfg(target_arch = "aarch64")'.dependencies]
cortex-a = { version = "7.x.x" }